--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ DATABASE_URL=sqlite:///db/development.db  # Database URL (adjust for your actual
 FLASK_APP=main.py  # Entry point for Flask app
 FLASK_ENV=development  # Set environment to "development" or "production"
 FLASK_DEBUG=True  # Enable debugging mode (set to False in production)
+PORT=5000
 
