--- a/.env
+++ b/.env
@@ -1,11 +1,4 @@
-# .env file
-
-SECRET_KEY=your-secret-key-here  # Set a strong secret key for session management
-AZURE_API_KEY=your-azure-api-key  # Set your Azure API key for authentication
-AZURE_ENDPOINT=your-azure-endpoint  # Set the Azure service endpoint URL
-DATABASE_URL=sqlite:///db/development.db  # Database URL (adjust for your actual database)
-FLASK_APP=main.py  # Entry point for Flask app
-FLASK_ENV=development  # Set environment to "development" or "production"
-FLASK_DEBUG=True  # Enable debugging mode (set to False in production)
-PORT=5000
-
+# Environment variables
+FLASK_ENV=production
+SECRET_KEY=your_secret_key
+DATABASE_URL=postgresql://user:password@db:5432/urban_copilot
