--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Environment variables
 FLASK_ENV=production
+FLASK_DEBUG=False
 SECRET_KEY=your_secret_key
 DATABASE_URL=postgresql://user:password@db:5432/urban_copilot
