--- a/requirements.txt
+++ b/requirements.txt
@@ -29,13 +29,9 @@ pexpect==4.9.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
 psutil==6.1.1
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pydantic==2.10.6
-pydantic_core==2.27.2
-Pygments==2.19.1
-python-dateutil==2.9.0.post
-python-dotenv==1.1.0
+flask==3.0.2
+gunicorn==21.2.0
+python-dotenv==1.0.1
 pyzmq==26.2.0
 six==1.17.0
 sniffio==1.3.1
