--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ distro==1.9.0
 exceptiongroup==1.2.2
 executing==2.2.0
 fastapi==0.115.12
+flask==3.0.2
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -29,10 +31,9 @@ pexpect==4.9.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
 psutil==6.1.1
-flask==3.0.2
-gunicorn==21.2.0
 python-dotenv==1.0.1
 pyzmq==26.2.0
+requests==2.31.0
 six==1.17.0
 sniffio==1.3.1
 stack-data==0.6.3
@@ -43,4 +44,5 @@ traitlets==5.14.3
 typing_extensions==4.12.2
 uvicorn==0.34.0
 wcwidth==0.2.13
-
+flask-swagger-ui==4.11.1
+Flask-Limiter==3.5.0
