--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,12 @@ pexpect==4.9.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
 psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+python-dateutil==2.9.0.post
 python-dotenv==1.0.1
 pyzmq==26.2.0
 requests==2.31.0
